--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "bootstrap": "yarn example && yarn && yarn pods",
+    "document": "npx typedoc --options ./typedoc.js src/"
   },
   "keywords": [
     "react-native",
